[tool.poetry]
name = "graphene-djmoney"
version = "0.2.0"
description = "GraphQL Money types for Django using graphene and django-money (djmoney)."
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "<3"
Django = ">2"
graphene-django = ">=2"
django-money = "^3.0.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = "*"
pytest = "*"
pytest-django = "*"
flake8 = "*"
flake8-datetimez = "*"
isort = "*"
safety = "*"
ssort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
