[tool.poetry]
name = "graphene-djmoney"
version = "0.2.1"
description = "GraphQL Money types for Django using graphene and django-money (djmoney)."
authors = ["Paul Craciunoiu <paul@craciunoiu.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
graphene = ">=2.1.7,<3"
graphql-core = ">=2.1.0"
graphene-django = ">=2"
Django = ">2"
django-money = "^3.0.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
autoflake = "*"
bandit = "*"
black = "*"
pytest = "*"
pytest-django = "*"
flake8 = "*"
flake8-datetimez = "*"
isort = "*"
safety = "*"
ssort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
